--- a/notebooks/quantization_llama_from_fine_tune.ipynb
+++ b/notebooks/quantization_llama_from_fine_tune.ipynb
@@ -129,7 +129,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.core.quantize_model import clone_repo, convert_model_to_gguf, quantize_model, build_project"
+    "from src.core.quantize_model import (\n",
+    "    clone_repo,\n",
+    "    convert_model_to_gguf,\n",
+    "    quantize_model,\n",
+    "    build_project,\n",
+    ")"
    ]
   },
   {
@@ -243,9 +248,7 @@
     "TOKEN = os.environ.get(\"TOKEN\")\n",
     "base_model_id = \"teknium/OpenHermes-2.5-Mistral-7B\"\n",
     "\n",
-    "snapshot_download(\n",
-    "    repo_id=base_model_id, local_dir=local_dir, token=TOKEN\n",
-    ")\n",
+    "snapshot_download(repo_id=base_model_id, local_dir=local_dir, token=TOKEN)\n",
     "# or using component import_model = registry_ml_client.components.get(name=\"download_model\", label=\"latest\")"
    ]
   },
@@ -279,7 +282,7 @@
    "source": [
     "model_name = \"original_model\"\n",
     "original_model_path = \"./model/\"\n",
-    "#original_model_path = \"./model/mlflow_model_folder/data/model/\"\n",
+    "# original_model_path = \"./model/mlflow_model_folder/data/model/\"\n",
     "quantized_model_path = \"./model_quantized/\""
    ]
   },
@@ -1059,7 +1062,7 @@
     }
    ],
    "source": [
-    "# local_dir or base_model_id \n",
+    "# local_dir or base_model_id\n",
     "pipeline = transformers.pipeline(\n",
     "    model=model, tokenizer=tokenizer, task=\"text-generation\"\n",
     ")"
@@ -1326,7 +1329,6 @@
     }
    ],
    "source": [
-    "\n",
     "# LOAD THE MODEL\n",
     "model_quantized = Llama(model_path=my_model_path, n_ctx=CONTEXT_SIZE)"
    ]
@@ -1453,12 +1455,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.core.tracking_model import tracking_mlflow_model \n",
+    "from src.core.tracking_model import tracking_mlflow_model\n",
     "\n",
     "code_path = \"./src/custom_loader\"\n",
     "conda_path = \"./src/conda.yaml\"\n",
-    "tracking_mlflow_model(code_path, my_model_path, conda_path)\n",
-    "\n"
+    "tracking_mlflow_model(code_path, my_model_path, conda_path)"
    ]
   },
   {
@@ -1706,7 +1707,7 @@
     }
    ],
    "source": [
-    "pred = unwrapped_model.predict(df, {'max_tokens': 256})"
+    "pred = unwrapped_model.predict(df, {\"max_tokens\": 256})"
    ]
   },
   {
@@ -1726,7 +1727,7 @@
     }
    ],
    "source": [
-    "pred['choices'][0]['text']"
+    "pred[\"choices\"][0][\"text\"]"
    ]
   },
   {
@@ -1758,7 +1759,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "endpoint_name = \"endpt-\" + datetime.datetime.now().strftime(\"%m%d%H%M%f\")\n",
     "\n",
     "# create an online endpoint\n",
@@ -1804,7 +1804,7 @@
     "    model=registered_model.id,\n",
     "    instance_type=\"Standard_NC48ads_A100_v4\",  # use GPU instance type for faster explanations\n",
     "    instance_count=1,\n",
-    "    #environment=environment,\n",
+    "    # environment=environment,\n",
     "    request_settings=OnlineRequestSettings(\n",
     "        max_concurrent_requests_per_instance=1,\n",
     "        request_timeout_ms=90000,\n",
@@ -1881,12 +1881,12 @@
     "    \"input_data\": {\n",
     "        \"index\": [0],\n",
     "        \"columns\": [\"text\"],\n",
-    "        \"data\": [[dialog] for dialog in data]\n",
+    "        \"data\": [[dialog] for dialog in data],\n",
     "    }\n",
     "}\n",
     "\n",
     "# Output the resultss\n",
-    "print(input_data)\n"
+    "print(input_data)"
    ]
   },
   {
@@ -1895,7 +1895,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# save the json object to a file named sample_score.json in the ./samsum-dataset folder\n",
     "with open(\"sample_score.json\", \"w\") as f:\n",
     "    json.dump(input_data, f)"
@@ -1969,6 +1968,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "# Delete the model_download folder if it exists\n",
     "if os.path.exists(original_model_path):\n",
     "    shutil.rmtree(original_model_path)\n",
